--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
 
   postgres:
-    image: postgres:16
+    image: herber177/pg-lab2:v1
     container_name: pg_lab2
     environment:
       POSTGRES_USER: admin
@@ -11,7 +11,6 @@ services:
       - 5432:5432
     volumes:
       - pg_data_lab2:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U admin -d productsdb"]
       interval: 5s
@@ -34,11 +33,8 @@ services:
     networks:
       - lab2_network
   api:
-    build:
-      context: ./api
-      dockerfile: Dockerfile
+    image: herber177/api-lab2:v1 
     container_name: api_lab2
-    
     depends_on:
       postgres:
         condition: service_healthy
